--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active {
+    background-color: rgb(17 24 39);
+    color: whitesmoke;
+}
+
+/* Css components */
+@import url("./assets/css/CardFlipSnippet.css");
